nile e integrirana, ne znam kak no stana XD

--- a/.env
+++ b/.env
@@ -1,2 +1,7 @@
 EXPO_PUBLIC_CLOUD_NAME=dlrwkpfea
 EXPO_PUBLIC_CLOUD_API_KEY=577416963256793
+
+EXPO_PUBLIC_DB_USERNAME=019582f2-a406-79c5-99c2-0159dc249d6f
+EXPO_PUBLIC_DB_PASSWORD=fd933975-4f33-4acb-b7de-4cb9b59351ec
+
+EXPO_PUBLIC_HOST_URL=http://78.130.161.67:8082
