--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "expo-web-browser": "~14.0.2",
     "firebase": "^11.4.0",
     "jest-expo": "52.0.6",
+    "moment": "^2.30.1",
     "node-postgres": "^0.6.2",
     "pg": "^8.13.3",
     "react": "18.3.1",
