--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@cloudinary/url-gen": "^1.21.0",
     "@expo/vector-icons": "^14.0.2",
     "@react-native-async-storage/async-storage": "1.23.1",
+    "@react-native-community/datetimepicker": "8.2.0",
     "@react-navigation/bottom-tabs": "^7.2.0",
     "@react-navigation/native": "^7.0.14",
     "axios": "^1.8.2",
@@ -25,11 +26,13 @@
     "expo": "52.0.38",
     "expo-blur": "~14.0.3",
     "expo-constants": "17.0.8",
+    "expo-file-system": "~18.0.11",
     "expo-font": "~13.0.4",
     "expo-haptics": "~14.0.1",
     "expo-image-picker": "~16.0.6",
     "expo-linking": "~7.0.5",
     "expo-router": "~4.0.19",
+    "expo-sharing": "~13.0.1",
     "expo-splash-screen": "~0.29.22",
     "expo-status-bar": "~2.0.1",
     "expo-symbols": "~0.2.2",
@@ -38,6 +41,7 @@
     "firebase": "^11.4.0",
     "jest-expo": "52.0.6",
     "moment": "^2.30.1",
+    "moment-timezone": "^0.5.47",
     "node-postgres": "^0.6.2",
     "pg": "^8.13.3",
     "react": "18.3.1",
@@ -49,10 +53,7 @@
     "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "~4.4.0",
     "react-native-web": "~0.19.13",
-    "react-native-webview": "13.12.5",
-    "@react-native-community/datetimepicker": "8.2.0",
-    "expo-file-system": "~18.0.11",
-    "expo-sharing": "~13.0.1"
+    "react-native-webview": "13.12.5"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
