--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "@react-navigation/native": "^7.0.14",
     "axios": "^1.8.2",
     "cloudinary-react-native": "^1.0.1",
-    "expo": "^52.0.42",
+    "expo": "~52.0.47",
     "expo-blur": "~14.0.3",
     "expo-constants": "17.0.8",
     "expo-file-system": "~18.0.11",
@@ -31,12 +31,12 @@
     "expo-haptics": "~14.0.1",
     "expo-image-picker": "~16.0.6",
     "expo-linking": "~7.0.5",
-    "expo-router": "~4.0.19",
+    "expo-router": "~4.0.21",
     "expo-sharing": "~13.0.1",
-    "expo-splash-screen": "~0.29.22",
+    "expo-splash-screen": "~0.29.24",
     "expo-status-bar": "~2.0.1",
     "expo-symbols": "~0.2.2",
-    "expo-system-ui": "~4.0.8",
+    "expo-system-ui": "~4.0.9",
     "expo-web-browser": "~14.0.2",
     "firebase": "^11.4.0",
     "jest-expo": "52.0.6",
@@ -46,7 +46,7 @@
     "pg": "^8.13.3",
     "react": "18.3.1",
     "react-dom": "18.3.1",
-    "react-native": "0.76.7",
+    "react-native": "0.76.9",
     "react-native-dropdown-picker": "^5.4.6",
     "react-native-gesture-handler": "~2.20.2",
     "react-native-reanimated": "~3.16.1",
