added users passwod changer

--- a/.env
+++ b/.env
@@ -4,6 +4,7 @@ EXPO_PUBLIC_CLOUD_API_KEY=577416963256793
 EXPO_PUBLIC_DB_USERNAME=01958331-13b6-7adc-ad83-13da850abab6
 EXPO_PUBLIC_DB_PASSWORD=ea028e52-5756-4033-98be-d48e62a444c0
 
-#EXPO_PUBLIC_HOST_URL=http://78.130.161.67:8082
-EXPO_PUBLIC_HOST_URL=http://localhost:8082
-#EXPO_PUBLIC_HOST_URL=https://uni-event-app.expo.app
+#EXPO_PUBLIC_HOST_URL=http://78.130.161.67:8082 #personal ip
+#EXPO_PUBLIC_HOST_URL=http://localhost:8082
+#EXPO_PUBLIC_HOST_URL=https://uni-event-app.expo.app #expo server ip 
+EXPO_PUBLIC_HOST_URL=http://10.0.2.2:8082 #emulatorip
