--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "version": "1.0.0",
   "scripts": {
     "start": "expo start --tunnel --port 8082",
-    "start:clear": "expo start --tunnel --port 8082 --clear",
+    "clear": "expo start --tunnel --port 8082 --clear",
+    "check": "npx tsc --noEmit",
     "reset-project": "node ./scripts/reset-project.js",
     "android": "expo start --android",
     "ios": "expo start --ios",
