--- a/package.json
+++ b/package.json
@@ -3,8 +3,8 @@
   "main": "expo-router/entry",
   "version": "1.0.0",
   "scripts": {
-    "start": "expo start --tunnel --port 8082",
-    "clear": "expo start --tunnel --port 8082 --clear",
+    "start": "expo start --lan --port 8082",
+    "clear": "expo start --lan --port 8082 --clear",
     "check": "npx tsc --noEmit",
     "reset-project": "node ./scripts/reset-project.js",
     "android": "expo start --android",
@@ -54,6 +54,7 @@
     "react-native": "0.76.9",
     "react-native-dropdown-picker": "^5.4.6",
     "react-native-gesture-handler": "~2.20.2",
+    "react-native-keyboard-aware-scroll-view": "^0.9.5",
     "react-native-reanimated": "~3.16.1",
     "react-native-responsive-screen": "^1.4.2",
     "react-native-safe-area-context": "4.12.0",
