--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@react-native-async-storage/async-storage": "1.23.1",
     "@react-native-community/datetimepicker": "8.2.0",
     "@react-navigation/bottom-tabs": "^7.2.0",
+    "@react-navigation/elements": "^2.6.3",
     "@react-navigation/native": "^7.0.14",
     "@tanstack/react-query": "^5.85.0",
     "axios": "^1.8.2",
@@ -29,7 +30,7 @@
     "expo": "~52.0.47",
     "expo-blur": "~14.0.3",
     "expo-constants": "17.0.8",
-    "expo-file-system": "~18.0.11",
+    "expo-file-system": "~18.0.12",
     "expo-font": "~13.0.4",
     "expo-haptics": "~14.0.1",
     "expo-image": "~2.0.7",
@@ -57,13 +58,14 @@
     "react-native-keyboard-aware-scroll-view": "^0.9.5",
     "react-native-reanimated": "~3.16.1",
     "react-native-responsive-screen": "^1.4.2",
-    "react-native-safe-area-context": "4.12.0",
+    "react-native-safe-area-context": "^4.12.0",
     "react-native-screens": "~4.4.0",
     "react-native-size-matters": "^0.4.2",
     "react-native-web": "~0.19.13",
     "react-native-webview": "13.12.5",
     "stream-chat-expo": "^8.3.3",
-    "stream-chat-react-native": "^8.3.3"
+    "stream-chat-react-native": "^8.3.3",
+    "expo-document-picker": "~13.0.3"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
