--- a/package.json
+++ b/package.json
@@ -29,7 +29,9 @@
     "cloudinary-react-native": "^1.0.1",
     "expo": "~52.0.47",
     "expo-blur": "~14.0.3",
+    "expo-clipboard": "^7.1.5",
     "expo-constants": "17.0.8",
+    "expo-document-picker": "~13.0.3",
     "expo-file-system": "~18.0.12",
     "expo-font": "~13.0.4",
     "expo-haptics": "~14.0.1",
@@ -64,8 +66,7 @@
     "react-native-web": "~0.19.13",
     "react-native-webview": "13.12.5",
     "stream-chat-expo": "^8.3.3",
-    "stream-chat-react-native": "^8.3.3",
-    "expo-document-picker": "~13.0.3"
+    "stream-chat-react-native": "^8.3.3"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
