--- a/package.json
+++ b/package.json
@@ -26,7 +26,6 @@
     "@react-navigation/native": "^7.0.14",
     "@tanstack/react-query": "^5.85.0",
     "axios": "^1.8.2",
-    "cloudinary-react-native": "^1.0.1",
     "expo": "~52.0.47",
     "expo-blur": "~14.0.3",
     "expo-clipboard": "^7.1.5",
@@ -47,10 +46,8 @@
     "expo-system-ui": "~4.0.9",
     "expo-web-browser": "~14.0.2",
     "firebase": "^11.4.0",
-    "jest-expo": "52.0.6",
     "moment": "^2.30.1",
     "moment-timezone": "^0.5.47",
-    "node-postgres": "^0.6.2",
     "pg": "^8.13.3",
     "react": "18.3.1",
     "react-dom": "18.3.1",
@@ -58,15 +55,12 @@
     "react-native-dropdown-picker": "^5.4.6",
     "react-native-gesture-handler": "~2.20.2",
     "react-native-keyboard-aware-scroll-view": "^0.9.5",
-    "react-native-reanimated": "~3.16.1",
     "react-native-responsive-screen": "^1.4.2",
     "react-native-safe-area-context": "^4.12.0",
     "react-native-screens": "~4.4.0",
     "react-native-size-matters": "^0.4.2",
     "react-native-web": "~0.19.13",
-    "react-native-webview": "13.12.5",
-    "stream-chat-expo": "^8.3.3",
-    "stream-chat-react-native": "^8.3.3"
+    "react-native-webview": "13.12.5"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
@@ -76,7 +70,7 @@
     "@types/react": "~18.3.12",
     "@types/react-test-renderer": "^18.3.0",
     "jest": "^29.2.1",
-    "jest-expo": "~52.0.6",
+    "jest-expo": "^53.0.9",
     "react-test-renderer": "18.3.1",
     "typescript": "^5.9.2"
   },
