REPLACED CLOUDINARY CHECKPOINT BEFORE DEV BUILD

--- a/.env
+++ b/.env
@@ -1,5 +1,6 @@
 EXPO_PUBLIC_CLOUDINARY_NAME=dlrwkpfea
 EXPO_PUBLIC_CLOUDINARY_API_KEY=577416963256793
+EXPO_PUBLIC_CLOUDINARY_PRESET=uni-event-app
 
 EXPO_PUBLIC_NILE_DB_USERNAME=01958331-13b6-7adc-ad83-13da850abab6
 EXPO_PUBLIC_NILE_DB_PASSWORD=ea028e52-5756-4033-98be-d48e62a444c0
